--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Get Up!</h1>
-    <h2>A simple program to remind you to take a break.</h2>
+    <center> <h2>A simple notifiction to remind you to take a break.</h2> </center>
 </body>
 </html>
