--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,13 +1,20 @@
 <!--GetUp, currently a test to render with flask-->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Get Up!</h1>
-    <center> <h2>A simple notifiction to remind you to take a break.</h2> </center>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="eye.ico">
+    <title>Get Up</title>
+  </head>
+  <body>
+    <div>
+    <h1>GET UP!</h1>
+    <center>
+      <h2>Take a break.</h2>
+      <h2>Relax.</h2> 
+    </center>
+    <div> 
+  </body>
 </html>
