Modified HTML file and added icon.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,11 +10,15 @@
   </head>
   <body>
     <div>
-    <h1>GET UP!</h1>
+    <h1>GU</h1>
+    <h3>Designed simply. Just for you.</h3> 
+    <div>
     <center>
-      <h2>Take a break.</h2>
-      <h2>Relax.</h2> 
+      <h2>How long are you going to work today..? </h2>
+      <h2>Hours: </h2> 
+      <h2>Minutes: </h2> 
     </center>
+    </div>
     <div> 
   </body>
 </html>
