Added html page and cleaned python file.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,24 +1,2 @@
-<!--GetUp, currently a test to render with flask-->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="eye.ico">
-    <title>Get Up</title>
-  </head>
-  <body>
-    <div>
-    <h1>GU</h1>
-    <h3>Designed simply. Just for you.</h3> 
-    <div>
-    <center>
-      <h2>How long are you going to work today..? </h2>
-      <h2>Hours: </h2> 
-      <h2>Minutes: </h2> 
-    </center>
-    </div>
-    <div> 
-  </body>
-</html>
+{% extends basic.html  %}
+{% block cont  %} Gettttt Up{% endblock %}
