Added style folder.

--- a/src/templates/basic.html
+++ b/src/templates/basic.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="icon" href="eye.ico">
     <title>{% block cont %}{% endblock %}</title>
   </head>
@@ -18,7 +18,6 @@
       <h2>How long are you going to work today..? </h2>
       <h2>Hours: </h2> 
       <h2>Minutes: </h2> 
-      <h2>{{cont}} </h2>
     </center>
     <!-- Writing code inside html file. -->
     {% for i in range(1,10) %}
