--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,9 +1,23 @@
+*{
+  box-sizing: border-box;
+}
+/* Body Style */
 body {
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 18px;
 }
-.h1 {
-  font-size: 100px;
+
+/* 3 image display option */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
