--- a/src/templates/basic.html
+++ b/src/templates/basic.html
@@ -9,25 +9,38 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <!-- Adding eye icon . -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='eye.ico') }}">
-    <title>{% block cont %}{% endblock %}</title>
+    <title>Get Up</title>
   </head>
   <body>
-    <div>
-    <h1>GU</h1>
+    <div> 
+    <h1>"GU"</h1>
     <h3>Designed simply. Just for you.</h3> 
-    <div>
-    <center>
+    <!-- 3 Diplayed Images -->
+    <div class="row"> 
+      <div class="column"> 
+        <img src="{{url_for('static', filename='running.jpg')}}" alt="run1" style="widows: 50%" />
+      </div>
+      <div class="column">
+        <img src="{{url_for('static', filename='running2.jpg')}}" alt="run2" style="widows: 50%" />
+      </div> 
+      <div class="column">
+        <img src="{{url_for('static', filename='running3.jpeg')}}" alt="run3" style="widows: 50%" />
+      </div>
+    <!-- 3 Diplayed Images -->
+    </div>
+    <div class="secondDiv">
+    <!-- <center> -->
       <h2>How long are you going to work today..? </h2>
       <h2>Hours: </h2> 
       <h2>Minutes: </h2> 
-    </center>
-    <!-- Writing code inside html file. -->
+    <!-- </center> -->
+    <!-- Writing code inside html file.
     {% for i in range(1,10) %}
 
         <p> printing for loop</p>
 
-    {% endfor %}
+    {% endfor %} -->
     </div>
-    <div> 
+    </div> 
   </body>
 </html>
